<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="${relativePackage}.${activityClass}" 
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/str_username"
        />
    
    <EditText
        android:id="@+id/edit_username_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:hint="@string/str_dodirni"
        >
        <requestFocus />
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/str_password"
        />

    <EditText
        android:id="@+id/edit_password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/str_dodirni"
        android:imeOptions="actionGo"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/str_login" />

</LinearLayout>
